--- a/software_company_website/style.css
+++ b/software_company_website/style.css
@@ -54,3 +54,43 @@ header .logo {
 header .logo img {
   height: 30px;
 }
+
+main {
+  padding: var(--primary-padding);
+}
+
+#hero-section {
+  display: flex;
+  align-items: center;
+}
+
+#hero-section .content h2 {
+  font-size: 48px;
+  font-weight: 400;
+}
+#hero-section .content h2 span {
+  font-weight: 700;
+  background-image: var(--primary-gradient);
+  color: transparent;
+  background-clip: text;
+}
+
+#hero-section .content p {
+  margin-top: 20px;
+  font-weight: 500;
+  line-height: 30px;
+}
+
+#hero-section .content .btn {
+  margin-top: 30px;
+  font-size: 14px;
+  width: fit-content;
+  padding: 14px 24px;
+  border-radius: 6px;
+  background-color: #524cea;
+  color: white;
+  transition: all 300ms;
+}
+#hero-section .content .btn:hover {
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
