--- a/software_company_website/style.css
+++ b/software_company_website/style.css
@@ -13,7 +13,8 @@
   --highlight-color: #5a007b;
   --primary-gradient: linear-gradient(to right, #81007a, #ce4c7e);
 
-  --primary-padding: 0px 100px;
+  --primary-padding: 0px 20px;
+  /* --primary-padding: 0px 100px; */
   --section-gap: 100px;
 }
 
@@ -61,6 +62,7 @@ header {
   align-items: center;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  position: relative;
 }
 header a {
   text-decoration: none;
@@ -90,6 +92,35 @@ header .logo img {
   height: 30px;
 }
 
+header > .wrapper {
+  display: flex;
+  display: none;
+  position: absolute;
+  top: 50px;
+  right: 20px;
+  flex-direction: column;
+  gap: 20px;
+  background-color: rgba(211, 211, 211, 0.764);
+  padding: 10px;
+  border-radius: 12px;
+}
+
+header > .wrapper nav {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+header #toggle {
+  display: none;
+}
+
+header .fa-solid {
+  font-size: 20px;
+}
+header #toggle:checked + .wrapper {
+  display: flex;
+}
 main {
   /* padding: var(--primary-padding); */
 }
@@ -98,6 +129,7 @@ main {
   display: flex;
   align-items: center;
   padding: var(--primary-padding);
+  flex-wrap: wrap-reverse;
 }
 
 #hero-section .content h2 {
@@ -115,6 +147,11 @@ main {
   margin-top: 20px;
   font-weight: 500;
   line-height: 30px;
+}
+
+#hero-section img {
+  max-width: 500px;
+  width: 100%;
 }
 
 #hero-section .content .btn {
@@ -135,6 +172,7 @@ main {
 #services-section {
   padding: var(--primary-padding);
   background-color: var(--secondary-bg-color);
+  margin-top: var(--section-gap);
   /* width: 98vw;
   margin-left: -100px; */
 }
@@ -142,6 +180,7 @@ main {
 #services-section .service-cards {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 #services-section > h2 {
@@ -150,13 +189,13 @@ main {
 }
 
 #services-section .service-card {
-  max-width: 350px;
-  min-width: 300px;
+  min-width: 250px;
+  /* max-width: 350px; */
   padding: 20px 10px;
   border-radius: 8px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   transition: all 300ms;
-  margin: 50px auto;
+  margin: 20px auto;
   border: 1px solid transparent;
 }
 
@@ -197,11 +236,17 @@ main {
   padding: var(--primary-padding);
   display: flex;
   align-items: center;
+  flex-wrap: wrap-reverse;
 }
 
 #about-section > img {
-  height: 350px;
+  /* height: 350px; */
+  width: 100%;
 }
+#about-section .content {
+  margin-top: 30px;
+}
+
 #about-section .content p {
   width: 80%;
   margin-top: 20px;
@@ -256,7 +301,7 @@ main {
 }
 
 #testimonials-section > p {
-  width: 45%;
+  /* width: 45%; */
   line-height: 25px;
   margin: 0 auto;
   margin-top: 15px;
@@ -286,6 +331,7 @@ main {
 #testimonials-section .testimonials-list {
   display: flex;
   justify-content: space-between;
+  overflow: auto;
 }
 
 #testimonials-section .user-feedback-card {
@@ -327,16 +373,19 @@ main {
 
 #case-studies-section .case-study-cards {
   margin-top: 40px;
+  /* display: flex;
+  flex-wrap: wrap; */
 }
 
 #case-studies-section .case-study {
-  height: 300px;
-  width: 1000px;
+  /* height: 300px; */
+  /* width: 1000px; */
   display: flex;
   margin: 20px auto;
   justify-content: space-between;
   align-items: self-start;
   border-radius: 10px;
+  flex-wrap: wrap;
 }
 
 #case-studies-section .card1 {
@@ -350,8 +399,9 @@ main {
 }
 
 #case-studies-section .case-study img {
-  height: 300px;
-  width: 500px;
+  /* height: 300px; */
+  /* width: 500px; */
+  width: 100%;
 }
 
 #case-studies-section .case-study .text h3 {
@@ -395,7 +445,8 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 870px;
+  flex-wrap: wrap-reverse;
+  /* width: 870px; */
   padding: 20px;
   margin: auto;
   border: transparent;
@@ -456,8 +507,9 @@ main {
 }
 
 #ways-section .way-of-working-card > img {
-  height: 300px;
-  width: 300px;
+  /* height: 300px; */
+  /* width: 300px; */
+  width: 100%;
 }
 #ways-section .way-of-working-card .content q::before {
   content: '';
@@ -496,11 +548,13 @@ main {
 #dev-approach-section .approach-cards .approach-card {
   padding: 25px;
   max-width: 550px;
-  max-height: 200px;
+  /* max-height: 200px; */
   display: flex;
   justify-content: right;
   border: 2px solid rgba(211, 211, 211, 0.3);
   background-color: var(--primary-bg-color);
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 #dev-approach-section .approach-cards .approach-card .icon-image {
@@ -557,6 +611,8 @@ main {
   display: flex;
   justify-content: center;
   gap: 20px;
+
+  display: none;
 }
 
 #tech-stack-section .tech-stack-links a {
@@ -600,14 +656,22 @@ main {
 #tech-stack-section .tech-stack-imgs {
   margin-top: 30px;
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
+  overflow: auto;
   gap: 50px;
 }
 
 #tech-stack-section .tech-stack-imgs img {
   width: 120px;
 }
+
+/* #dev-process-section */
+
+#dev-process-section {
+  margin: var(--section-gap);
+}
+#dev-process-section
 
 /* #resources-section */
 
@@ -656,6 +720,7 @@ main {
 
 #resources-section .resources-cards {
   display: flex;
+  overflow: auto;
 }
 
 #cta-section {
@@ -670,6 +735,8 @@ main {
   color: var(--primary-text-color);
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
   border-radius: 24px;
 }
 
@@ -692,6 +759,7 @@ footer {
 footer .top-footer {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   color: var(--secondary-text-color);
 }
 
