Module 3 Making website responsive 8-8

--- a/software_company_website/css/min-768.css
+++ b/software_company_website/css/min-768.css
@@ -6,4 +6,18 @@
   #services-section .service-cards .service-card {
     max-width: 350px;
   }
+  #dev-approach-section .approach-cards .approach-card {
+    max-width: 300px;
+  }
+
+  .fluid-img {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+
+  #ways-section .ways-of-working-cards .way-of-working-card {
+    width: 70%;
+    margin: 0 auto;
+    gap: 15px;
+  }
 }
